# PasswordFileManager

./: .gitignore  CMakeLists.txt  README.md  build.bat  notes.md
data/: sample_input.txt
src/: main.cpp  main_gui.cpp
src/core/: Controller.cpp  Controller.h  Crypto.cpp  Crypto.h  Database.cpp  Database.h  FileGenerator.cpp  FileGenerator.h  FileParser.cpp  FileParser.h  Models.h
src/gui/: MainWindow.cpp  MainWindow.h
src/tests/: testController.cpp  testCrypto.cpp  testDB.cpp  testDB.h  testDatabase.cpp  testFileGenerator.cpp  testFileParser.cpp  testRunner.cpp
